--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "millionadahomepage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ilyalibin.github.io/millionadahomepage",
+  "homepage": "https://millionadahomepage.io/",
   "dependencies": {
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
